# VirtualTerrain

./: .gitignore  CMakeLists.txt  README.md  SOURCES.md  TODO.md
data/: blur_0.frag  blur_1.frag  box_reduction.frag  bypass.vert  extract_highlights.frag  normals.frag  normals.vert  tone_mapping.frag
source/: AABox.h  Application.cpp  Application.h  BakedScenery.cpp  BakedScenery.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  ChunkContainer.cpp  ChunkContainer.h  DEMElevation.cpp  DEMElevation.h  DEMElevationData.cpp  DEMElevationData.h  DecadePatch.cpp  DecadePatch.h  ElevationData.cpp  ElevationData.h  ElevationDataSlice.cpp  ElevationDataSlice.h  ElevationProvider.h  Framebuffer.cpp  Framebuffer.h  Frustum.cpp  Frustum.h  Patch.cpp  Patch.h  Perlin.cpp  Perlin.h  PerlinElevation.cpp  PerlinElevation.h  Plane.cpp  Plane.h  Planet.cpp  Planet.h  Shader.cpp  Shader.h  (+9 more)
